// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: dangerous link, collapsed 1`] = `
<li>
  <a
    className="link-no-underline"
    onClick={[Function]}
    rel="nofollow noreferrer noopener"
    target="_blank"
    title="Dangerous"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="dangerous"
    />
    Dangerous
  </a>
</li>
`;

exports[`should match snapshot: dangerous link, expanded 1`] = `
<li>
  <a
    className="link-no-underline"
    onClick={[Function]}
    rel="nofollow noreferrer noopener"
    target="_blank"
    title="Dangerous"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="dangerous"
    />
    Dangerous
  </a>
  <div
    className="little-spacer-top display-flex-center"
  >
    <input
      className="overview-key width-80"
      onClick={[Function]}
      readOnly={true}
      type="text"
      value="javascript:alert("hi")"
    />
    <ClearButton
      className="little-spacer-left"
      onClick={[Function]}
    />
  </div>
</li>
`;

exports[`should match snapshot: default 1`] = `
<li>
  <a
    className="link-no-underline"
    href="http://example.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
    title="Foo"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="foo"
    />
    Foo
  </a>
</li>
`;

exports[`should match snapshot: icon only 1`] = `
<li>
  <a
    className="link-no-underline"
    href="http://example.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
    title="Foo"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="foo"
    />
  </a>
</li>
`;
